In process of writing test for true facet